# no2-air-quality-classification-austria

./: .gitignore  CITATION.cff  LICENSE  README.md  codemeta.json  croissant.json  pyproject.toml  requirements.txt  ro-crate-metadata.json
data/: data-inventory.csv
data/raw/: README.md  SPO.09.A23.65511.8.1.parquet  SPO.09.AKC.1548.8.1.parquet  SPO.09.BELG.1500.8.1.parquet  SPO.09.FLO.1510.8.1.parquet  SPO.09.GAUD.1505.8.1.parquet  SPO.09.JAEG.820.8.1.parquet  SPO.09.KE.1047.8.1.parquet  SPO.09.KEND.1522.8.1.parquet  SPO.09.LIES.1527.8.1.parquet  SPO.09.LOB.826.8.1.parquet  SPO.09.MBA.1515.8.1.parquet  SPO.09.SCHA.1537.8.1.parquet  SPO.09.STAD.1542.8.1.parquet  SPO.09.STEF.815.8.1.parquet  SPO.09.TAB.524.8.1.parquet  (+1 more)
docs/: a-b-final-check.md  a-b-task-status.md  codemeta-notes.md  dbrepo-metadata-plan.md  dmp-comparison-template.md  dmp-tool-contributors-note.md  eea-licence-review.md  er-diagram.md  fair4ml-metadata.json  final-a-b-status-report.md  licences.md  model-card.md  ostrails-test-assignment.md  pdf-alignment-check.md  release-notes-v2-draft.md  ro-crate-plan.md  schema.sql  semantic-mapping.md  standards-overlap-analysis.md  tuwel-upload-manifest.md  tuwrd-generated-data-deposit-metadata.md  tuwrd-model-deposit-metadata.md  unit-mapping.md  views.sql
notebooks/: dbrepo_setup_template.ipynb  t23_t25_unit_mapping_and_data_loading.ipynb  t25_verify_views.ipynb
scripts/: create_dbrepo_structured_view.py  create_dbrepo_views.py  export_dbrepo_import_csvs.py  load_dbrepo_import_csvs.py  train_no2_classifier.py
src/: ingest_dbrepo.py
(+16 files in other folders)
