[project]
name = "no2-air-quality-classification-austria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib==3.10.8",
    "notebook==7.5.5",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "python-dotenv>=1.2.2",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
]
