[project]
name = "no2-air-quality-classification-austria"
version = "2.0.0"
description = "NO2 air-quality classification project using EEA data and DBRepo API access."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.8",
    "notebook==7.5.5",
    "pandas==2.3.3",
    "pyarrow==23.0.1",
    "python-dotenv>=1.2.2",
    "requests==2.33.1",
    "scikit-learn==1.8.0",
]
